@@ -199,8 +199,8 @@ module AdLint #:nodoc:
         Ld::MapTypedefPhase,
         Ld::MapFunctionPhase,
         Ld::MapVariablePhase,
-        Ld::LinkFunctionPhase,
-        Ld::LinkVariablePhase,
+        Ld::BuildCallGraphPhase,
+        Ld::BuildXRefGraphPhase,
         Ld::PreparePhase,
         Ld::TypedefReviewPhase,
         Ld::FunctionReviewPhase,
