@@ -1,3 +1,10 @@
+Tue May 28 16:28:11 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/ld/object.rb : Rewrite object cross-reference graph and
+	  function call graph management.
+	* lib/adlint/ld/typedef.rb : Ditto.
+	* lib/adlint/analyzer.rb : Ditto.
+
 Tue May 28 11:31:54 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* lib/adlint/cpp/phase.rb : Refine inner object names of phase context.
